--- a/settings.json
+++ b/settings.json
@@ -17,5 +17,8 @@
         "jupyter-notebook": "left"
     },
     "workbench.statusBar.visible": false,
-    "workbench.startupEditor": "none"
+    "workbench.startupEditor": "none",
+    "explorer.confirmDragAndDrop": false,
+    "python.pythonPath": "/usr/bin/python3",
+    "python.defaultInterpreterPath": "/usr/bin/python3"
 }
